@@ -1,6 +1,6 @@
 AUX essentia-2.1_beta5-wscript.patch 341 BLAKE2B 0337a7b2329c0dc80f0cc9772b725b517775d5c44b0b19efcffcefcb078ce6ab25ad6fd9ccf4f8b91cb292545bc75285bc3396d27226da98ad67b5dd072cdb7c SHA512 11564d0bee4e5a5d11d13facad707d4cb936cd5987710166ef797d91e886df2bb65b985c0f467405314af326b69691f76648360c46f5bd3c4379c31c56326111
 DIST audio.zip 68911326 BLAKE2B 6b6bf697a5cbf7e50e641dcc718afeb4de7d5df750bbdc3316fa26ea3feefb9bfeb24c9445877d6977761a73bdfb489c99d527bfb3504437b86219ce28a2b2e8 SHA512 bcbe164563a6249a699155e212f9f2bf110033e39ef6e8920e30d3d61ab4db35e14d81a6d228213859e56a3e62d19197fdde28a2ded3a04221224cc722b51a25
 DIST essentia-2.1_beta5.tar.gz 68079452 BLAKE2B f208be0b91930777a531fb00f5aa9291c386369bba4930d749a128b350964b71b300bd5e814505234e9bb152c1db7db3aed18a06d4ff322235f8169c66376baa SHA512 7fce02739d8a4e40035f8d14071df38a25b4b7633e1e05fa8003947e9d4514e41b0095ef8eed7428902dc7046de3ce2f98438e791786c6c99057717695ee8820
-EBUILD essentia-2.1_beta5.ebuild 3522 BLAKE2B 21a9c7388fc55fd3b0e2cfed7b38eb8e985c106235e3e85daf95b4087ae8439d25b90d1489ffa132d884ff6c964492ad372a811c7b4af253e4060f9eb95a4385 SHA512 2a033d5045f17950dd08360eb29f29b873bbdf0a780eb6cf281fb4537617658f42df247a9c23b85c7dd6559cc6aaf310afc9ff829e23755fca7a2c5becc4924b
-MISC ChangeLog 399 BLAKE2B 0beb447ed08ac7258348815ba3079d6ac090afd1eb1582e60ecd679af4d02de069499cf5b04aaf8bcf8098547edd077216142441797157af2529dd58458d880e SHA512 87d4af25049eeac7486ea3f0d92f289e7ac3d703d4eefa9abe2b7d2bcf5829c0eb3a6922035c26e5e0f3f1c6406c607b4535cf6ad03a6f353120ebdbb37ec263
+EBUILD essentia-2.1_beta5.ebuild 3801 BLAKE2B 36f006cc4fe22fa19c0cc5fa2f8fef558fbb93f67771434086a6bb54d4e05765e043d8c97a09bc1a991dba0e8e617d499cce1ba7c3fa2bfb6fb8de0f0f7d5d12 SHA512 cff093342659b77b882e765a7ad62b07d87558de7aeece9b51050b6bb83381c04f6ca0abe3f8eb6fae3a66ef15740809d03bbdc4f6d3a4e08c0fc176b69fe75c
+MISC ChangeLog 507 BLAKE2B 6230452fc459fb81ca6799c9fd30033048e80155d28876b0f81ea7d62d5edc288cbd26077dc6c20e8b3c5dc9f408cee71af545c6abfc4d3cb812ddd8696cb2ac SHA512 43b29462bc54d3524379c3ec65234a77d69a71b5aecbc2a5d84d16068032fc2cfbbd6fbda9b0e5f98ce4e07f688c2f2d143d86ea0ccd4bc6e9e7599f94f23107
 MISC metadata.xml 1925 BLAKE2B f782f7c0635c5572e34586ab7cf99588d1412884378f99e977c7c3108e39834a37063ad2a54b0f2b76f360a1d3d061e0af328755ab9b0bfc7e3e58dd97579bb5 SHA512 7fdece8f34a618b666737dbd3e4b3d44180a9d678482473cbe6293afa5223f5874703bd1e372055968285eda3b4b790752c86e4f402296e4045934a8231a16f1
